minor tweaks to article

--- a/article/settApr2014.html
+++ b/article/settApr2014.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <meta name="description" content="ES6: Jump in, the water is warm!"/>
-    <meta name="keywords" content="SETT, OCI, JavaScript, Traceur, ES6"/>
+    <meta name="keywords" content="SETT, OCI, JavaScript, Traceur, ES6, JSHint, Grunt"/>
     <meta name="author" content="R. Mark Volkmann"/>
     <title>SETT April 2014 - ES6: Jump in, the water is warm!</title>
 
@@ -64,7 +64,7 @@
   It may take years for all the features in ES6
   to be supported in all the major browsers.
   That's too long to wait and you don't have to wait.
-  You can use a transpiler today.
+  You can use a transpiler (described below) today.
   This will enable getting comfortable with the new features sooner
   and will allow writing more compact, more expressive code now.
 </p>
@@ -252,7 +252,7 @@ is the <code>let</code> keyword.
 <p>
   Gulp, at <a href="http://gulpjs.com">http://gulpjs.com</a> is a similar tool.
   I used Grunt in the example presented here, but
-  I welcome a pull request to the example GitHub repo
+  I welcome a pull request to the GitHub repo
   with an equivalent <code>gulpfile.js</code> file.
 <p>
 
