minor CSS change and moved screenshot file

--- a/article/settApr2014.html
+++ b/article/settApr2014.html
@@ -11,7 +11,7 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="http://ociweb.com/sett/rss.xml">
     <link href="styles/SETT.css" rel="stylesheet">
     <style>
-      img { border: solid LightGray 1px; }
+      .screenshot { border: solid LightGray 1px; }
     </style>
 
     <!--Used for syntax highlighting.  -->
@@ -352,7 +352,7 @@ module.exports = function (grunt) {
 </ol>
 
 <h3>Screenshot</h3>
-<img src="screenshot.png" alt="Todo app screenshot">
+<img class="screenshot" src="settApr2014_files/screenshot.png" alt="Todo app screenshot">
 
 <p>
   While AngularJS is not the focus of this article, here is a brief explanation
