--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <script src="build/app.js"></script>
     <script src="http://localhost:35729/livereload.js"></script>
   </head>
-  <body ng-controller="TodoCtrl">
+  <body ng-controller="TodoCtrl as vm">
     <h2>To Do List</h2>
     <div>
-      {{todoList.getUncompletedCount()}} of {{todoList.length}} remaining
-      <button ng-click="todoList.archiveCompleted()">Archive Completed</button>
+      {{vm.todoList.getUncompletedCount()}} of {{vm.todoList.length}} remaining
+      <button ng-click="vm.todoList.archiveCompleted()">Archive Completed</button>
     </div>
     <br>
 
     <!-- Wrapping this in a form causes the button to be activated
          when the input has focus and the return key is pressed. -->
     <form>
-      <input type="text" ng-model="todoText" size="30"
+      <input type="text" ng-model="vm.todoText" size="30"
         placeholder="enter new todo here" autofocus>
-      <button ng-click="addTodo()" ng-disabled="!todoText">Add</button>
+      <button ng-click="vm.addTodo()" ng-disabled="!vm.todoText">Add</button>
     </form>
 
     <ul class="unstyled">
-      <li ng-repeat="(timestamp, todo) in todoList.todos">
+      <li ng-repeat="(timestamp, todo) in vm.todoList.todos">
         <input type="checkbox" ng-model="todo.done">
         <span class="done-{{todo.done}}">{{todo.text}}</span>
-        <button ng-click="todoList.delete(todo)">Delete</button>
+        <button ng-click="vm.todoList.delete(todo)">Delete</button>
       </li>
     </ul>
   </body>
